moved components into own folder and fixed alignment on cards and move component call out of app file.

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
-
+.home h1 {
+    text-align: center;
+}
+.projects h2 {
+    text-align: center;
+}
 
 .cards {
     display: grid;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    padding-left: 150px;
+    padding-left: 200px;
     
 }
